--- a/SampleApp/App.config
+++ b/SampleApp/App.config
@@ -3,12 +3,18 @@
   
 <connectionStrings>
   <add 
-    name="TimeTrackerEntities" 
+    name="TTEntities" 
     connectionString="metadata=
-    res://*/TimeTrackerModel.csdl|
-    res://*/TimeTrackerModel.ssdl|
-    res://*/TimeTrackerModel.msl;provider=System.Data.SQLite;provider connection string='data source=&quot;D:\GIT Repos\WinFormsMvp\SampleApp\ExampleData\TimeTracker.s3db&quot;'" 
+    res://SampleApp/ExampleData.TimeTrackerEntitiesModel.csdl|
+    res://SampleApp/ExampleData.TimeTrackerEntitiesModel.ssdl|
+    res://SampleApp/ExampleData.TimeTrackerEntitiesModel.msl;
+    provider=System.Data.SQLite;
+    provider connection string='data source=&quot;|DataDirectory|\ExampleData\TimeTracker.s3db&quot;'" 
     providerName="System.Data.EntityClient" />
 </connectionStrings>
-  
+
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+
 </configuration>
