--- a/SampleApp/SampleApp.csproj
+++ b/SampleApp/SampleApp.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>SampleApp</RootNamespace>
     <AssemblyName>SampleApp</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -34,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="StructureMap">
+      <HintPath>..\Assemblies\StructureMap.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
@@ -51,21 +55,38 @@
   <ItemGroup>
     <Compile Include="ExampleData\GenericRepository.cs" />
     <Compile Include="ExampleData\IGenericRepository.cs" />
+    <Compile Include="ExampleData\TaskRepository.cs" />
     <Compile Include="ExampleData\TimeTrackerEntitiesModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TimeTrackerEntitiesModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="ExampleData\UnitOfWork.cs" />
+    <Compile Include="ExampleData\ProjectRepository.cs" />
+    <Compile Include="Ioc\DependancyRegistry.cs" />
+    <Compile Include="Ioc\ServiceLocator.cs" />
+    <Compile Include="Models\CreateProjectModel.cs" />
+    <Compile Include="Models\CreateTaskModel.cs" />
+    <Compile Include="Models\CreateWorkItemModel.cs" />
+    <Compile Include="Presenters\CreateProjectPresenter.cs" />
+    <Compile Include="Presenters\CreateTaskPresenter.cs" />
+    <Compile Include="Presenters\CreateWorkItemPresenter.cs" />
+    <Compile Include="Services\ITimeTrackerService.cs" />
     <Compile Include="Services\TimeTrackerService.cs" />
-    <Compile Include="Views\Form1.cs">
+    <Compile Include="Views\CreateProjectForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Views\CreateTaskForm.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\CreateWorkItemForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ICreateProjectView.cs" />
+    <Compile Include="Views\ICreateTaskView.cs" />
+    <Compile Include="Views\ICreateWorkItemView.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -74,10 +95,13 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="ExampleData\TimeTracker.s3db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <EntityDeploy Include="ExampleData\TimeTrackerEntitiesModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -99,10 +123,7 @@
       <Name>WinFormsMvp</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Presenters\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
