Further work on the sample app. Added logic to populate the 3rd grid on the AllItemsView.

--- a/SampleApp/SampleApp.csproj
+++ b/SampleApp/SampleApp.csproj
@@ -73,8 +73,12 @@
     <Compile Include="Presenters\CreateProjectPresenter.cs" />
     <Compile Include="Presenters\CreateTaskPresenter.cs" />
     <Compile Include="Presenters\CreateWorkItemPresenter.cs" />
+    <Compile Include="Presenters\ManageAllDataPresenter.cs" />
     <Compile Include="Services\ITimeTrackerService.cs" />
     <Compile Include="Services\TimeTrackerService.cs" />
+    <Compile Include="Views\AllDataView.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Views\CreateProjectForm.cs">
       <SubType>Form</SubType>
     </Compile>
