--- a/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
+++ b/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -46,7 +47,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binder\AssemblyExtensions.cs" />
+    <Compile Include="Binder\AttributeBasedPresenterDiscoveryStrategyTests.cs" />
+    <Compile Include="Binder\ConventionBasedPresenterDiscoveryStrategyTests.cs" />
+    <Compile Include="Models\CreateProjectModel.cs" />
+    <Compile Include="Models\MainFormModel.cs" />
+    <Compile Include="Presenters\CreateProjectPresenter.cs" />
+    <Compile Include="Presenters\MainEntryViewPresnter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\CreateProjectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ICreateProjectView.cs" />
+    <Compile Include="Views\IMainView.cs" />
+    <Compile Include="Views\MainView.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WinFormsMvp\WinFormsMvp.csproj">
@@ -54,6 +69,7 @@
       <Name>WinFormsMvp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
