Made changes to force the database that the app accesses to be the mdf file in the ExampleData folder in the project, rather than bin/debug.

--- a/ExampleApplication/app.config
+++ b/ExampleApplication/app.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
-  <connectionStrings>
-    <add name="TimeTrackerEntities" connectionString="metadata=res://*/ExampleData.TimeTrackerModel.csdl|res://*/ExampleData.TimeTrackerModel.ssdl|res://*/ExampleData.TimeTrackerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;attachdbfilename=|DataDirectory|\ExampleData\TimeTracker.mdf;integrated security=True;connect timeout=30;user instance=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="TimeTrackerEntities" 
+                          connectionString="metadata=res://*/TimeTrackerModel.csdl|res://*/TimeTrackerModel.ssdl|res://*/TimeTrackerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;attachdbfilename=|DataDirectory|\TimeTracker.mdf;integrated security=True;connect timeout=30;user instance=True;multipleactiveresultsets=True;&#xD;&#xA;         App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
