--- a/ExampleApplication/ExampleApplication.csproj
+++ b/ExampleApplication/ExampleApplication.csproj
@@ -53,6 +53,10 @@
     <StartupObject>ExampleApplication.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="envdte, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>C:\Program Files (x86)\Common Files\Microsoft Shared\MSEnv\PublicAssemblies\envdte.dll</HintPath>
+    </Reference>
     <Reference Include="StructureMap">
       <HintPath>..\Assemblies\StructureMap.dll</HintPath>
     </Reference>
@@ -72,17 +76,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExampleData\GenericRepository.cs" />
-    <Compile Include="ExampleData\IGenericRepository.cs" />
-    <Compile Include="ExampleData\ProjectRepository.cs" />
-    <Compile Include="ExampleData\TaskRepository.cs" />
-    <Compile Include="ExampleData\TimeTrackerModel.Designer.cs">
+    <Compile Include="GenericRepository.cs" />
+    <Compile Include="IGenericRepository.cs" />
+    <Compile Include="ProjectRepository.cs" />
+    <Compile Include="TaskRepository.cs" />
+    <Compile Include="TimeTrackerModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TimeTrackerModel.edmx</DependentUpon>
     </Compile>
-    <Compile Include="ExampleData\UnitOfWork.cs" />
-    <Compile Include="ExampleData\WorkRepository.cs" />
+    <Compile Include="UnitOfWork.cs" />
+    <Compile Include="WorkRepository.cs" />
     <Compile Include="Ioc\DependancyRegistry.cs" />
     <Compile Include="Ioc\ServiceLocator.cs" />
     <Compile Include="Models\CreateProjectModel.cs" />
@@ -130,7 +134,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
-    <EntityDeploy Include="ExampleData\TimeTrackerModel.edmx">
+    <EntityDeploy Include="TimeTrackerModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>TimeTrackerModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
@@ -154,11 +158,8 @@
     <Content Include="book.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="ExampleData\TimeTracker.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="ExampleData\TimeTracker.mdf" />
     <Content Include="ExampleData\TimeTracker_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>TimeTracker.mdf</DependentUpon>
     </Content>
     <Content Include="tick.png">
