Added last bit of sample prject functionality i.e. delete a work item. Performed some code cleanup.

--- a/ExampleApplication/ExampleApplication.csproj
+++ b/ExampleApplication/ExampleApplication.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Custom\SelectedWorkItemEventArgs.cs" />
     <Compile Include="DataAccess\GenericRepository.cs" />
     <Compile Include="DataAccess\IGenericRepository.cs" />
     <Compile Include="DataAccess\ProjectRepository.cs" />
