Split code into 2 solutions, one isolates the WinformsMVP dll.

--- a/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
+++ b/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
@@ -32,6 +32,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>WinformsMVPTestsKey.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -78,13 +84,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
+    <None Include="WinformsMVPTestsKey.snk" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\WinFormsMvp\WinFormsMvp.csproj">
       <Project>{F211DF11-2B89-4FFC-A9B8-4BA9CDF41A9F}</Project>
       <Name>WinFormsMvp</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
