--- a/ExampleApplication/ExampleApplication.csproj
+++ b/ExampleApplication/ExampleApplication.csproj
@@ -81,6 +81,8 @@
     <Compile Include="DataAccess\IGenericRepository.cs" />
     <Compile Include="DataAccess\ProjectRepository.cs" />
     <Compile Include="DataAccess\TaskRepository.cs" />
+    <Compile Include="Models\ChooseProjectModel.cs" />
+    <Compile Include="Presenters\ChooseProjectPresenter.cs" />
     <Compile Include="TimeTrackerModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -121,8 +123,12 @@
     <Compile Include="Views\ICreateTaskView.cs" />
     <Compile Include="Views\ICreateWorkItemView.cs" />
     <Compile Include="Views\IMainView.cs" />
+    <Compile Include="Views\IProjectChooser.cs" />
     <Compile Include="Views\MainView.cs">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ProjectChooserControl.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
