--- a/WinFormsMvp/WinFormsMvp.csproj
+++ b/WinFormsMvp/WinFormsMvp.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -63,11 +64,23 @@
     <Compile Include="BindingMode.cs" />
     <Compile Include="CollectionExtensions.cs" />
     <Compile Include="CompositeView`TView.cs" />
+    <Compile Include="Forms\MvpForm`.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MvpForm`.Designer.cs">
+      <DependentUpon>MvpForm`.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MvpUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Forms\MvpForm.cs">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MvpUserControl`.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\MvpUserControl`.Designer.cs">
+      <DependentUpon>MvpUserControl`.cs</DependentUpon>
     </Compile>
     <Compile Include="ICompositeView.cs" />
     <Compile Include="IPresenter.cs" />
