--- a/WinFormsMvp/WinFormsMvp.csproj
+++ b/WinFormsMvp/WinFormsMvp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="BindingMode.cs" />
     <Compile Include="CollectionExtensions.cs" />
     <Compile Include="CompositeView`TView.cs" />
+    <Compile Include="Forms\AddPersonModel.cs" />
     <Compile Include="Forms\MvpForm`.cs">
       <SubType>Form</SubType>
     </Compile>
