--- a/LicenceTrackerExampleApp/packages.config
+++ b/LicenceTrackerExampleApp/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
+  <package id="Unity" version="2.0" targetFramework="net45" />
 </packages>
