--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\LicenceTracker\packages.config" />
   <repository path="..\LicenceTrackerExampleApp\packages.config" />
   <repository path="..\WinFormsMvp.UnitTests\packages.config" />
+  <repository path="..\WinFormsMvp.Unity\packages.config" />
 </repositories>
