Added Unit Tests for StructureMap DI support and fixed a namespace for the StructureMap DI library.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\LicenceTrackerExampleApp\packages.config" />
+  <repository path="..\WebFormsMvp.StructureMap\packages.config" />
   <repository path="..\WinFormsMvp.PresenterFactoryUnitTests\packages.config" />
+  <repository path="..\WinFormsMvp.StructureMap\packages.config" />
   <repository path="..\WinFormsMvp.UnitTests\packages.config" />
   <repository path="..\WinFormsMvp.Unity\packages.config" />
 </repositories>
