--- a/WinFormsMvp.StructureMap/WinFormsMvp.StructureMap.csproj
+++ b/WinFormsMvp.StructureMap/WinFormsMvp.StructureMap.csproj
@@ -3,17 +3,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>
-    </ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BD9166D6-D5AB-4001-A467-D8EE7CEDE022}</ProjectGuid>
+    <ProjectGuid>{B1CCE4B6-0D35-4043-AC66-6A31FA0E3C79}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WinFormsMvp.PresenterFactoryUnitTests</RootNamespace>
-    <AssemblyName>WinFormsMvp.PresenterFactoryUnitTests</AssemblyName>
+    <RootNamespace>WinFormsMvp.StructureMap</RootNamespace>
+    <AssemblyName>WinFormsMvp.StructureMap</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,7 +34,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>WinFormsMvpPresenterFactoryTestsKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>WinFormsMvpStructureMapReleaseKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.ServiceLocation">
@@ -55,35 +53,22 @@
     <Reference Include="Microsoft.Practices.Unity.Interception.Configuration">
       <HintPath>..\packages\Unity.2.0\lib\20\Microsoft.Practices.Unity.Interception.Configuration.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="StructureMap">
       <HintPath>..\packages\structuremap.2.6.4.1\lib\net40\StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
-      <Visible>False</Visible>
-    </CodeAnalysisDependentAssemblyPaths>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="PresenterFactoryTests.cs" />
+    <Compile Include="StructureMapPresenterFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StructureMapPresenterFactoryTests.cs" />
-    <Compile Include="UnityPresenterFactoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WinFormsMvp.StructureMap\WinFormsMvp.StructureMap.csproj">
-      <Project>{B1CCE4B6-0D35-4043-AC66-6A31FA0E3C79}</Project>
-      <Name>WinFormsMvp.StructureMap</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WinFormsMvp.Unity\WinFormsMvp.Unity.csproj">
-      <Project>{D3E48A8F-DBE7-4F8F-A20A-B00DDB078B61}</Project>
-      <Name>WinFormsMvp.Unity</Name>
-    </ProjectReference>
     <ProjectReference Include="..\WinFormsMvp\WinFormsMvp.csproj">
       <Project>{F211DF11-2B89-4FFC-A9B8-4BA9CDF41A9F}</Project>
       <Name>WinFormsMvp</Name>
@@ -91,9 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="WinFormsMvpPresenterFactoryTestsKey.snk" />
+    <None Include="WinFormsMvpStructureMapReleaseKey.snk" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
