--- a/WinFormsMvp.Unity/WinFormsMvp.Unity.csproj
+++ b/WinFormsMvp.Unity/WinFormsMvp.Unity.csproj
@@ -30,6 +30,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>WinFormsMvpUnityReleaseKey.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\packages\Unity.2.0\lib\20\Microsoft.Practices.ServiceLocation.dll</HintPath>
@@ -61,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="WinFormsMvpUnityReleaseKey.snk" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WinFormsMvp\WinFormsMvp.csproj">
