--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\ExampleApplication\packages.config" />
   <repository path="..\LicenceTrackerExampleApp\packages.config" />
   <repository path="..\WebFormsMvp.StructureMap\packages.config" />
   <repository path="..\WinFormsMvp.PresenterFactoryUnitTests\packages.config" />
