--- a/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
+++ b/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
@@ -64,6 +64,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppStateTests.cs" />
     <Compile Include="Binder\AssemblyExtensions.cs" />
     <Compile Include="Binder\AttributeBasedPresenterDiscoveryStrategyTests.cs" />
     <Compile Include="Binder\ConventionBasedPresenterDiscoveryStrategyTests.cs" />
