Finished implementing the basics of the MessageBus class and added some tests.

--- a/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
+++ b/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
@@ -71,6 +71,8 @@
     <Compile Include="Binder\DefaultPresenterFactoryTests.cs" />
     <Compile Include="CollectionExtensionsTest.cs" />
     <Compile Include="CompositeViewTests.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="MessengerRegisterUnregisterTest.cs" />
     <Compile Include="Models\CreateProjectModel.cs" />
     <Compile Include="Models\CreateTaskModel.cs" />
     <Compile Include="Models\MainFormModel.cs" />
