Added samples of how to use MessageBus to the example app and added another unit test.

--- a/LicenceTrackerExampleApp/LicenceTracker.csproj
+++ b/LicenceTrackerExampleApp/LicenceTracker.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Views\LaunchView.Designer.cs">
       <DependentUpon>LaunchView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\LogEvent.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
