--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\ExampleApplication\packages.config" />
   <repository path="..\LicenceTrackerExampleApp\packages.config" />
+  <repository path="..\WinFormsMvp.Ninject\packages.config" />
   <repository path="..\WinFormsMvp.PresenterFactoryUnitTests\packages.config" />
   <repository path="..\WinFormsMvp.StructureMap\packages.config" />
   <repository path="..\WinFormsMvp.UnitTests\packages.config" />
