Improved origingal example project and added StructureMap dependancy injection to it to showcase that.

--- a/ExampleApplication/app.config
+++ b/ExampleApplication/app.config
@@ -1,11 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
-
   <connectionStrings>
-    <add name="TimeTrackerEntities"
-         connectionString="metadata=res://*/TimeTrackerModel.csdl|res://*/TimeTrackerModel.ssdl|res://*/TimeTrackerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;attachdbfilename=|DataDirectory|\TimeTracker.mdf;integrated security=True;connect timeout=30;user instance=True;multipleactiveresultsets=True;&#xD;&#xA;         App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TimetrackerContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=Timetracker;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
