--- a/Src/WinFormsMvp.StructureMap/WinFormsMvp.StructureMap.csproj
+++ b/Src/WinFormsMvp.StructureMap/WinFormsMvp.StructureMap.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WinFormsMvp.StructureMap</RootNamespace>
     <AssemblyName>WinFormsMvp.StructureMap</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -36,10 +36,11 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>WinFormsMvpStructureMapReleaseKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="StructureMap">
@@ -61,7 +62,6 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="WinFormsMvpStructureMapReleaseKey.snk" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WinFormsMvp\WinFormsMvp.csproj">
