--- a/Src/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
+++ b/Src/WinFormsMvp.UnitTests/WinFormsMvp.UnitTests.csproj
@@ -41,7 +41,8 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>WinformsMVPTestsKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -108,7 +109,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="WinformsMVPTestsKey.snk" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WinFormsMvp\WinFormsMvp.csproj">
